upgrade all to windows-latest with python 3.12

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,6 +30,7 @@ jobs:
             "windows-py39",
             "windows-py310",
             "windows-py311",
+            "windows-py312",
             "ubuntu-py39",
             "ubuntu-py310",
             "ubuntu-py311",
@@ -47,6 +48,9 @@ jobs:
             os: windows-latest
           - name: "windows-py311"
             python: "3.11"
+            os: windows-latest
+          - name: "windows-py312"
+            python: "3.12"
             os: windows-latest
           - name: "ubuntu-py39"
             python: "3.9"
